# GhidraDec

./: .gitignore  CMakeLists.txt  Directory.Build.props  GhidraDec.sln  GhidraDec.vcxproj  GhidraDec.vcxproj.filters  GhidraDecIface.cpp  GhidraDecIface.vcxproj  GhidraDecIface.vcxproj.filters  LICENSE  MakeGhidraDec.bat  PropertySheet.props  README.md  code_viewer.cpp  code_viewer.h  config_generator.cpp  cpp.hint  decompiler.cpp  decompiler.h  defs.cpp  defs.h  extractghidra.bat  ghidradec.corpus.json  ghidradec.targets.json  idaplugin.cpp  idaplugin.h  plugin_config.cpp  sleighinterface.cpp  sleighinterface.h
.github/workflows/: ci.yml  ida-regression.yml  release.yml
Ghidra/: Ghidra.vcxproj  Ghidra.vcxproj.filters  address.cc  coreaction.cc  database.cc  flow.cc  fspec.cc  funcdata.hh  grammar.tab.cpp  grammar.tab.h  pcodeparse.tab.cpp  pcodeparse.tab.h  printc.cc  ruleaction.cc  slghscan.flex.cpp  type.hh  varmap.cc  xml.tab.cpp  xml.tab.h
Ghidra9/: Ghidra.vcxproj  Ghidra.vcxproj.filters  coreaction.cc  grammar.tab.cpp  grammar.tab.h  jumptable.cc  pcodeparse.tab.cpp  printc.cc  ruleparse.tab.cpp  ruleparse.tab.h  slghparse.tab.cpp  slghparse.tab.hh  slghscan.flex.cpp  slghscan.flex.hh  type.cc  xml.tab.cpp
GhidraDec-x64dbg/: Branding.cpp  Branding.h  CppSyntaxHighlighter.cpp  CppSyntaxHighlighter.h  CxxView.cpp  CxxView.h  GhidraDec-x64dbg.vcxproj  GhidraDec-x64dbg.vcxproj.filters  GhidraDecView.cpp  GhidraDecView.h  MainWindow.cpp  MainWindow.h  PluginMain.cpp  PluginMain.h  QtPlugin.cpp  QtPlugin.h  TextView.cpp  TextView.h  Version.h  config.h  dllmain.cpp  x64dbg-module.qrc
cmake/: GhidraDecManifest.cmake  deploy_plugin.cmake
decompile9/: pcodeparse.tab.cpp  pcodeparse.tab.h  pcodeparse.tab.hpp  pcodeparse.y  xml.tab.cpp  xml.tab.h  xml.tab.hpp
docs/: build-and-release.md  ida-ghidra-processor-audit.md  ida-regression-testing.md
ide/vs/: Ghidra.vcxproj  Ghidra.vcxproj.filters  GhidraDec.sln  GhidraDec.vcxproj  GhidraDec.vcxproj.filters  GhidraDecIface.vcxproj  GhidraDecIface.vcxproj.filters  PropertySheet.props
src/: GhidraDecIface.cpp  code_viewer.cpp  code_viewer.h  config_generator.cpp  decompiler.cpp  decompiler.h  defs.cpp  defs.h  ghidradec_icon.h  idaplugin.cpp  idaplugin.h  plugin_config.cpp  sleighinterface.cpp  sleighinterface.h
src/retdec/utils/: address.h  filesystem_path.h
tests/ida93/: enable_ida_crash_dumps.ps1  ghidradec_ida_smoke.idc.in  ghidradec_ida_smoke.py  run_ida93_smoke.ps1
tools/: build.ps1  build.py  corpus.py  deps.py  dump_ida_lph.py  ida_batch.py  ida_batch_decompile_all.py  ida_corpus_battery.py  ida_sdk.py  ida_sdk_crypto.ps1
